14-deploy-k8s-solution/expense/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: expense-app
  labels:
    name: expense-app
