14-deploy-k8s-solution/expense/k8s/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-app
  namespace: expense-app
  labels:
    app: expense-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-app
  template:
    metadata:
      labels:
        app: expense-app
    spec:
      containers:
      - name: expense-app
        image: quay.io/quarkus/quarkus-micro-image:2.0
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
