14-deploy-k8s-solution/expense/k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-app-loadbalancer
  labels:
    app: expense-app
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: expense-app
