14-deploy-k8s-solution/expense/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-app-service
  labels:
    app: expense-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: expense-app
